--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <header>
+      <a href="/">TweetApp</a>
+      <a href="/about">TweetAppとは</a>
+    </header>
     <%= yield %>
   </body>
 </html>
