--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 
   <body>
     <header>
-      <a href="/">TweetApp</a>
-      <a href="/about">TweetAppとは</a>
+      <%= link_to("TweetApp", "/") %>
+      <%= link_to("TweetAppとは", "/about") %>
     </header>
     <%= yield %>
   </body>
