--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% @posts.each do |post| %>
 <div>
-    <%= post.content %>
+    <%= link_to(post.content, "/posts/#{post.id}") %>
 </div>
 <% end %>
