--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,4 @@
-<textarea></textarea>
-<input type="submit" value="投稿">
+<%= form_tag("/posts/create") do %>
+    <textarea name="content"></textarea>
+    <input type="submit" value="投稿">
+<% end %>
