--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,9 @@
 <%= form_tag("/posts/#{@post.id}/update") do %>
+    <%= @post.errors.full_messages.each do |message| %>
+        <div>
+            <%= message %>
+        </div>
+    <% end %>
     <textarea name="content"><%= @post.content %></textarea>
     <input type="submit" value="保存">
-<% end %> 
+<% end %>
