Add: user list page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <header>
       <%= link_to("TweetApp", "/") %>
       <%= link_to("TweetAppとは", "/about") %>
+      <%= link_to("投稿一覧", "/posts") %>
+      <%= link_to("ユーザー一覧", "/users") %>
     </header>
     <% if flash[:notice] %>
       <%= flash[:notice] %>
