--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,4 @@
 <%= form_tag("/posts/create") do %>
-    <% @post.errors.full_messages.each do |message| %>
-        <div>
-            <%= message %>
-        </div>
-    <% end %>
-    <textarea name="content"><%= @post.content %></textarea>
+    <textarea name="content"></textarea>
     <input type="submit" value="投稿">
 <% end %>
