--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <%= link_to("TweetApp", "/") %>
       <%= link_to("TweetAppとは", "/about") %>
       <%= link_to("投稿一覧", "/posts") %>
-      <%#<%= link_to("新規投稿", "/posts/new") %>
+      <%= link_to("新規投稿", "/posts/new") %>
       <%= link_to("ユーザー一覧", "/users") %>
     </header>
     <% if flash[:notice] %>
