--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= link_to("投稿一覧", "/posts") %>
       <%= link_to("新規投稿", "/posts/new") %>
       <%= link_to("ユーザー一覧", "/users") %>
+      <%= link_to("新規登録", "/signup") %>
     </header>
     <% if flash[:notice] %>
       <%= flash[:notice] %>
