--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,6 +1,8 @@
 <h2>新規ユーザー登録</h2>
-<p>ユーザー名</p>
-<input name="name">
-<p>メールアドレス</p>
-<input name="email">
-<input type="submit" value="新規登録">
+<%= form_tag("/users/create") do %>
+    <p>ユーザー名</p>
+    <input name="name">
+    <p>メールアドレス</p>
+    <input name="email">
+    <input type="submit" value="新規登録">
+<% end %>
