--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,8 +1,15 @@
 <h2>新規ユーザー登録</h2>
 <%= form_tag("/users/create") do %>
+    <% if @user.errors %>
+        <% @user.errors.full_messages.each do |message| %>
+            <div>
+                <%= message %>
+            </div>
+        <% end %>
+    <% end %>
     <p>ユーザー名</p>
-    <input name="name">
+    <input name="name" value="<%= @user.name %>">
     <p>メールアドレス</p>
-    <input name="email">
+    <input name="email" value="<%= @user.email %>">
     <input type="submit" value="新規登録">
 <% end %>
