--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <h2>ユーザー一覧</h2>
 <% @users.each do |user| %>
 <div>
-    <%= link_to(user.name, "/users/#{user.id}") %>
+    <div class="user-left">
+        <img src="<%= "/user_images/#{user.image_name}" %>"> 
+        <%= link_to(user.name, "/users/#{user.id}") %>          
+    </div>
 </div>
 <% end %>
