--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
-<div>
-    <p>name:<%= @user.name %></p>
+<div class="user">
+    <img src="<%= "/user_images/#{@user.image_name}" %>">
+    <h2><%= @user.name %></h2>
+    <p><%= @user.email %></p>
+    <%= link_to("編集", "/users/#{@user.id}/edit")%>
 </div>
-<div>
-    <p>email:<%= @user.email %></p>
-</div>
-<%= link_to("編集", "/users/#{@user.id}/edit")%>
