--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/users/#{@user.id}/update") do %>
+<%= form_tag("/users/#{@user.id}/update", {multipart: true}) do %>
     <% @user.errors.full_messages.each do |message| %>
         <div>
             <%= message %>
@@ -6,6 +6,8 @@
     <% end %>
     <p>ユーザー名</p>
     <input name="name" value="<%= @user.name %>">
+    <p>画像</p>
+    <input name="image", type="file">
     <p>メールアドレス</p>
     <input name="email" value="<%= @user.email %>">
     <input type="submit" value="保存">
