--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,17 @@
 
   <body>
     <header>
-      <%= link_to("TweetApp", "/") %>
-      <%= link_to("TweetAppとは", "/about") %>
-      <%= link_to("投稿一覧", "/posts") %>
-      <%= link_to("新規投稿", "/posts/new") %>
-      <%= link_to("ユーザー一覧", "/users") %>
-      <%= link_to("新規登録", "/signup") %>
+      <% if session[:user_id] %>
+        <%= link_to("TweetApp", "/") %>
+        <%= link_to("投稿一覧", "/posts/index") %>
+        <%= link_to("新規投稿", "/posts/new") %>
+        <%= link_to("ユーザー一覧", "/users") %>
+        <%= link_to("ログアウト", "/logout", {method: "post"}) %>
+      <% else %>
+        <%= link_to("TweetAppとは", "/about") %>
+        <%= link_to("ログイン", "/login") %>
+        <%= link_to("新規登録", "/signup") %>
+      <% end %>
     </header>
     <% if flash[:notice] %>
       <%= flash[:notice] %>
