--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -11,5 +11,7 @@
     <input name="name" value="<%= @user.name %>">
     <p>メールアドレス</p>
     <input name="email" value="<%= @user.email %>">
+    <p>パスワード</p>
+    <input type="password" name="password">
     <input type="submit" value="新規登録">
 <% end %>
