--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,7 +1,7 @@
+<h2>ログイン</h2>
 <% if @error_message %>
     <%= @error_message %>
 <% end %>
-
 <%= form_tag("/login") do %>
     <p>メールアドレス</p>
     <input name="email" value="<%= @email %>">
