--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,15 @@
   <body>
     <header>
       <% if session[:user_id] %>
+        <% current_user = User.find_by(id: session[:user_id]) %>
         <%= link_to("TweetApp", "/") %>
+        <%= link_to(current_user.name, "/users/#{current_user.id}") %>
         <%= link_to("投稿一覧", "/posts/index") %>
         <%= link_to("新規投稿", "/posts/new") %>
         <%= link_to("ユーザー一覧", "/users") %>
         <%= link_to("ログアウト", "/logout", {method: "post"}) %>
       <% else %>
+        <%= link_to("TweetApp", "/") %>
         <%= link_to("TweetAppとは", "/about") %>
         <%= link_to("ログイン", "/login") %>
         <%= link_to("新規登録", "/signup") %>
