--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,6 @@
             <%= message %>
         </div>
     <% end %>
-    <textarea name="content"></textarea>
+    <textarea name="content"><%= @post.content %></textarea>
     <input type="submit" value="投稿">
 <% end %>
