--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+<div class="post-user-name">
+    <img src="<%= "/user_images/#{@user.image_name}" %>">
+    <%= link_to(@user.name, "/users/#{@user.id}") %>
+</div>
 <div>
     <%= @post.content %>
     <%= @post.created_at %>    
