Fix: posts appearance

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
-<div class="post-user-name">
-    <img src="<%= "/user_images/#{@user.image_name}" %>">
-    <%= link_to(@user.name, "/users/#{@user.id}") %>
+<div class="posts-show-item">
+    <div class="post-user-name">
+        <img src="<%= "/user_images/#{@user.image_name}" %>">
+        <%= link_to(@user.name, "/users/#{@user.id}") %>
+    </div>
 </div>
 <div>
     <%= @post.content %>
