--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
 <% @posts.each do |post| %>
-<div>
+<div class="posts-show-item">
+    <img src= "<%= "/user_images/#{post.user.image_name}" %>">
+    <%= link_to(post.user.name, "/users/#{post.user.id}")%>
     <%= link_to(post.content, "/posts/#{post.id}") %>
 </div>
 <% end %>
