--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="posts-show-item">
     <div class="post-user-name">
-        <img src="<%= "/user_images/#{@user.image_name}" %>">
-        <%= link_to(@user.name, "/users/#{@user.id}") %>
+        <img src="<%= "/user_images/#{@post.user.image_name}" %>">
+        <%= link_to(@post.user.name, "/users/#{@post.user.id}") %>
     </div>
 </div>
 <div>
