--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,17 @@
     <% if @user.id == @current_user.id %>
         <%= link_to("編集", "/users/#{@user.id}/edit")%>
     <% end %>
+
+    <% @user.posts.each do |post| %>
+        <div class="posts-show-item">
+            <div class="post-user-name">
+                <img src="<%= "/user_images/#{post.user.image_name}" %>">
+                <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+            </div>
+        </div>
+        <div>
+            <%= post.content %>
+            <%= post.created_at %>    
+        </div>
+    <% end %>
 </div>
