--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,11 @@
     <%= @post.content %>
     <%= @post.created_at %>    
 </div>
+<% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
+    <%= link_to("いいね！済み", "/likes/#{@post.id}/destroy", {method: "post"}) %>
+<% else %>
+    <%= link_to("いいね！", "/likes/#{@post.id}/create", {method: "post"}) %>
+<% end %>
 <% if @post.user_id == @current_user.id %>
     <%= link_to("編集", "/posts/#{@post.id}/edit") %>
     <%= link_to("削除", "/posts/#{@post.id}/destroy", {method: "post"}) %>
