--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,15 +8,18 @@
     <%= @post.content %>
     <%= @post.created_at %>    
 </div>
-<% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
-    <%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
-        <i class="fa fa-heart"></i>
+<div>
+    <% if Like.find_by(user_id: @current_user.id, post_id: @post.id) %>
+        <%= link_to("/likes/#{@post.id}/destroy", {method: "post"}) do %>
+            <i class="fa fa-heart"></i>
+        <% end %>
+    <% else %>
+        <%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
+            <i class="fa-regular fa-heart"></i>
+        <% end %>
     <% end %>
-<% else %>
-    <%= link_to("/likes/#{@post.id}/create", {method: "post"}) do %>
-        <i class="fa-regular fa-heart"></i>
-    <% end %>
-<% end %>
+    <%= @like %>
+</div>
 <% if @post.user_id == @current_user.id %>
     <%= link_to("編集", "/posts/#{@post.id}/edit") %>
     <%= link_to("削除", "/posts/#{@post.id}/destroy", {method: "post"}) %>
